some things for frontend

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,11 +12,11 @@
 
 a {
   font-weight: 500;
-  color: #00F5C4;
+  color: #f75475;
   text-decoration: inherit;
 }
 a:hover {
-  color: #00857A;
+  color: #f75475;
 }
 
 body {
